@@ -1,0 +1,223 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+Aeotec ZW111 Nano Dimmer, base on Engineering Spec 12/07/2016
+Product Type ID: EU=0x00, US=0x01, AU=0x02 CN=0x1D
+-->
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+    <!-- Configuration Parameters -->
+    <CommandClass id="112">
+        <Value type="list" index="3" genre="config" label="Over current protection" units="" min="0" max="1" size="1" value="1">
+            <Help>Output load will be closed after 30 seconds if the current exceeds (US: 15.5A, AU or EU: 10.5A).</Help>
+            <Item label="Disable" value="0"/>
+            <Item label="Enable" value="1"/>
+        </Value>
+        <Value type="list" index="4" genre="config" label="Over heat protection" units="" min="0" max="1" size="1" value="0">
+            <Help>Output load will be closed after 30 seconds if the temperature inside the product exceeds 100C.</Help>
+            <Item label="Disable" value="0"/>
+            <Item label="Enable" value="1"/>
+        </Value>
+        <Value type="list" index="20" genre="config" label="Status re-power on" size="1" value="0">
+            <Help>Configure the output load status after re-power on</Help>
+            <Item label="The last status before the power outage" value="0"/>
+            <Item label="Always on" value="1"/>
+            <Item label="Always off" value="2"/>
+        </Value>
+        <Value type="list" index="80" genre="config" label="Notification report association group 1" units="" size="1" value="3">
+            <Help>To set which notification would be sent to the associated nodes in association group 1 when the state of output load is changed</Help>
+            <Item label="None" value="0"/>
+            <Item label="Hail" value="1"/>
+            <Item label="Basic" value="2"/>
+            <Item label="Send Multilevel Switch report" value="3"/>
+            <Item label="Send Hail CC when using the manual switch to change the load state" value="4"/>
+        </Value>
+        <Value type="list" index="81" genre="config" label="Notification report using the external switch 1" units="" size="1" value="1">
+            <Help>To set which notification would be sent to the associated nodes in association group 3 when using the external switch 1 to switch the loads</Help>
+            <Item label="None" value="0"/>
+            <Item label="Basic" value="1"/>
+        </Value>
+        <Value type="list" index="82" genre="config" label="Notification report using the external switch 2" units="" size="1" value="1">
+            <Help>To set which notification would be sent to the associated nodes in association group 4 when using the external switch 2 to switch the loads</Help>
+            <Item label="None" value="0"/>
+            <Item label="Basic" value="1"/>
+        </Value>
+        <Value type="int" index="85" genre="config" label="State appointment 1" value="2566920192">
+            <Help>State appointment
+                Set the ON time of output load.
+                Value1 = 0, disable or = non zero, enable (day, bit0 - bit6 represent Mon to Sun).
+                Value2 = ON (hour)
+                Value3 = ON (minute)
+                Value4 = ON (brightness level)
+            </Help>
+        </Value>
+        <Value type="int" index="86" genre="config" label="State appointment 2" value="8960">
+            <Help>State appointment
+                Set the ON time of output load.
+                Value1 = 0, disable or = non zero, enable (day, bit0 - bit6 represent Mon to Sun).
+                Value2 = ON (hour)
+                Value3 = ON (minute)
+                Value4 = ON (brightness level)
+            </Help>
+        </Value>
+        <Value type="list" index="90" genre="config" label="Enable/disable the parameter 91 and 92" units="" size="1" value="0">
+            <Help>Enables/disables parameter 91 and 92</Help>
+            <Item label="Disable" value="0"/>
+            <Item label="Enable" value="1"/>
+        </Value>
+        <Value type="short" index="91" genre="config" label="Minimum Change to send Report (Watt)" units="watts" min="0" max="6000" size="2" value="25">
+            <Help>The value represents the minimum change in wattage for a Report to be sent (default 25 W)</Help>
+        </Value>
+        <Value type="byte" index="92" genre="config" label="Minimum Change to send Report (%)" units="%" min="0" max="100" value="5">
+            <Help>The value represents the minimum percentage change in wattage for a Report to be sent (Default 5)</Help>
+        </Value>
+        <Value type="button" index="100" genre="config" label="Default Group Reports" units="" write_only="true" affects="101,102,103">
+            <Help>Set report types for groups 1, 2 and 3 to default.</Help>
+        </Value>
+        <Value type="int" index="101" genre="config" label="Report type sent in Reporting Group 1" units="" value="0">
+            <Help>
+                Defines the type of report sent for reporting group 1.
+                1 is meter report for voltage.
+                2 is meter report for current.
+                4 is meter report for watts.
+                8 is meter report for kilowatts.
+                Value 1 (msb) Reserved
+                Value 2 Reserved
+                Value 3 Reserved
+                Value 4 (lsb) bits 7-4 reserved
+                bit 3 current
+                bit 2 voltage
+                bit 1 watt
+                bit 0 kWh
+            </Help>
+        </Value>
+        <Value type="int" index="102" genre="config" label="Report type sent in Reporting Group 2" units="" value="0">
+            <Help>
+                Defines the type of report sent for reporting group 2.
+                1 is meter report for voltage.
+                2 is meter report for current.
+                4 is meter report for watts.
+                8 is meter report for kilowatts.
+                Value 1 (msb) Reserved
+                Value 2 Reserved
+                Value 3 Reserved
+                Value 4 (lsb) bits 7-4 reserved
+                bit 3 current
+                bit 2 voltage
+                bit 1 watt
+                bit 0 kWh
+            </Help>
+        </Value>
+        <Value type="int" index="103" genre="config" label="Report type sent in Reporting Group 3" units="" value="0">
+            <Help>
+                Defines the type of report sent for reporting group 3.
+                1 is meter report for voltage.
+                2 is meter report for current.
+                4 is meter report for watts.
+                8 is meter report for kilowatts.
+                Value 1 (msb) Reserved
+                Value 2 Reserved
+                Value 3 Reserved
+                Value 4 (lsb) bits 7-4 reserved
+                bit 3 current
+                bit 2 voltage
+                bit 1 watt
+                bit 0 kWh
+            </Help>
+        </Value>
+        <Value type="button" index="110" genre="config" label="Set 111-113 to default" units="" write_only="true" value="0" affects="111,112,113">
+            <Help>Set time interval for sending reports for groups 1, 2 and 3 to default.</Help>
+        </Value>
+        <Value type="int" index="111" genre="config" label="Send Interval for Reporting Group 1" units="seconds" min="0" max="2147483647" value="3">
+            <Help>Defines the time interval when the defined report for group 1 is sent.</Help>
+        </Value>
+        <Value type="int" index="112" genre="config" label="Send Interval for Reporting Group 2" units="seconds" min="0" max="2147483647" value="600">
+            <Help>Defines the time interval when the defined report for group 2 is sent.</Help>
+        </Value>
+        <Value type="int" index="113" genre="config" label="Send Interval for Reporting Group 3" units="seconds" min="0" max="2147483647" value="600">
+            <Help>Defines the time interval when the defined report for group 3 is sent.</Help>
+        </Value>
+        <Value type="list" index="120" genre="config" label="Set the external switch mode for S1" units="" min="0" max="3" size="1" value="0">
+            <Help>When the mode is determined, this mode value will not be reset after exclusion</Help>
+            <Item label="Enter automatic identification mode" value="0"/>
+            <Item label="Momentary button mode" value="1"/>
+            <Item label="3-way switch mode" value="2"/>
+            <Item label="2-state switch mode" value="3"/>
+        </Value>
+        <Value type="list" index="121" genre="config" label="Set the external switch mode for S2" units="" min="0" max="3" size="1" value="0">
+            <Help>When the mode is determined, this mode value will not be reset after exclusion</Help>
+            <Item label="Enter automatic identification mode" value="0"/>
+            <Item label="Momentary button mode" value="1"/>
+            <Item label="3-way switch mode" value="2"/>
+            <Item label="2-state switch mode" value="3"/>
+        </Value>
+        <Value type="list" index="122" genre="config" label="Touch panel port state" units="" min="0" max="5" size="1" value="0" read_only="true">
+            <Help>Get the state of touch panel port</Help>
+            <Item label="Not connected" value="0"/>
+            <Item label="Connected" value="5"/>
+        </Value>
+        <Value type="list" index="123" genre="config" label="Control destination for external switch S1" units="" min="0" max="3" size="1" value="3">
+            <Help>Set the control destination for external switch S1</Help>
+            <Item label="Output loads of itself" value="1"/>
+            <Item label="Other nodes" value="2"/>
+            <Item label="Output loads of itself and other nodes" value="3"/>
+        </Value>
+        <Value type="list" index="124" genre="config" label="Control destination for external switch S2" units="" min="1" max="3" size="1" value="3">
+            <Help>Set the control destination for external switch S2</Help>
+            <Item label="Output loads of itself" value="1"/>
+            <Item label="Other nodes" value="2"/>
+            <Item label="Output loads of itself and other nodes" value="3"/>
+        </Value>
+        <Value type="byte" index="125" genre="config" label="Default dimming rate" units="%" min="0" max="99" value="3">
+            <Help>Set the default dimming rate</Help>
+        </Value>
+        <Value type="list" index="128" genre="config" label="Current working mode" units="" min="0" max="2" size="1" value="0" read_only="true">
+            <Help>Get the current working mode</Help>
+            <Item label="Unknown" value="0"/>
+            <Item label="2-wire mode" value="1"/>
+            <Item label="3-wire mode" value="2"/>
+        </Value>
+        <Value type="list" index="129" genre="config" label="Dimming principle" units="" min="0" max="1" size="1" value="1">
+            <Help>Set the dimming principle</Help>
+            <Item label="Trailing edge mode" value="0"/>
+            <Item label="Leading edge mode" value="1"/>
+        </Value>
+        <Value type="list" index="130" genre="config" label="Type of load" units="" min="0" max="3" size="1" value="0" read_only="true">
+            <Help>To get what type of load the Dimmer is connected to</Help>
+            <Item label="Unknown" value="0"/>
+            <Item label="Resistive load" value="1"/>
+            <Item label="Capacitive load" value="2"/>
+            <Item label="Inductive load" value="3"/>
+        </Value>
+        <Value type="byte" index="131" genre="config" label="Min brightness level" units="%" min="0" max="99" value="20">
+            <Help>Set the min brightness level that the load can reach to</Help>
+        </Value>
+        <Value type="byte" index="132" genre="config" label="Max brightness level" units="%" min="0" max="99" value="95">
+            <Help>Set the max brightness level that the load can reach to</Help>
+        </Value>
+        <Value type="list" index="249" genre="config" label="Recognition way of load" units="" min="0" max="2" size="1" value="2">
+            <Help>Set the recognition way of load</Help>
+            <Item label="Never recognize the load when power on" value="0"/>
+            <Item label="Only recognize once when first power on" value="1"/>
+            <Item label="Recognize the load once power on" value="2"/>
+        </Value>
+        <Value type="list" index="252" genre="config" label="Configuration Locked" units="" min="0" max="1" size="1" value="0">
+            <Help>Enable/disable Configuration Locked</Help>
+            <Item label="Disable" value="0"/>
+            <Item label="Enable" value="1"/>
+        </Value>
+        <Value type="list" index="255" genre="config" label="Reset To Factory Defaults" size="4" value="1" write_only="true">
+            <Help>Reset to factory defaults</Help>
+            <Item label="Reset to factory default setting" value="0"/>
+            <Item label="Normal" value="1"/>
+            <Item label="Reset to factory default setting and removed from the z-wave network" value="1431655765"/>
+        </Value>
+    </CommandClass>
+    <!-- Association Groups -->
+    <CommandClass id="133">
+        <Associations num_groups="4">
+            <Group index="1" max_associations="5" label="Lifeline"/>
+            <Group index="2" max_associations="5" label="Retransmit"/>
+            <Group index="3" max_associations="5" label="Control Key1"/>
+            <Group index="4" max_associations="5" label="Control Key2"/>
+        </Associations>
+    </CommandClass>
+</Product>
